syntax = "proto3";

option go_package = "qantas.com/task/model;model";

enum ErrorReason {
  TASK_UNSPECIFIED = 0;
  TASK_NOT_FOUND = 1;
}
