syntax = "proto3";

option go_package = "qantas.com/task/model;model";

import "google/protobuf/timestamp.proto";

message Task {
    int32 TaskID = 1;
    string Name = 2;
    string Content = 3;
    google.protobuf.Timestamp CreatedAt = 4;
    google.protobuf.Timestamp UpdatedAt = 5;
    google.protobuf.Timestamp DeletedAt = 6;
}

message ListTasksRequest {
  ListTasksRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListTasksResponse {
  repeated Task races = 1;
}

// Filter for listing races.
message ListTasksRequestFilter {
  repeated int64 task_ids = 1;
}
